--- a/project.properties
+++ b/project.properties
@@ -11,7 +11,7 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-16
-android.library.reference.1=../../Libs/ActionBarSherlock
-android.library.reference.2=../../Libs/ViewPagerIndicator
-android.library.reference.3=../../Libs/GooglePlayServices
+target=android-17
+android.library.reference.1=..\\ActionBarSherlock\\actionbarsherlock
+android.library.reference.2=..\\Android-ViewPagerIndicator\\library
+android.library.reference.3=..\\google-play-services_lib
